# PasswordManager

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/app/: AppController.cpp  AppController.h
src/crypto/: AES.cpp  AES.h  Hash.cpp  Hash.h  Utils.cpp  Utils.h
src/db/: Database.cpp  Database.h  Migrations.cpp  Migrations.h
src/services/: AuthService.cpp  AuthService.h  CredentialService.cpp  CredentialService.h  PasswordGenerator.cpp  PasswordGenerator.h
src/util/: ActivityLogger.h  ConsoleColor.h  SecureMemory.h
